--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,17 @@ plugins {
 
 repositories {
     mavenCentral()
+    mavenLocal()
+    maven { url 'https://jitpack.io' }
     maven {
         url "http://dl.bintray.com/kyonifer/maven"
-        jcenter()
     }
+    jcenter()
 }
 
 // Defining my dependencies. In this case, WPILib (+ friends)
 dependencies {
+    compile "com.github.Oblarg:command-rewrite-jitpack:1.4.0"
     compile wpi.deps.wpilib()
     compile wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
@@ -33,8 +36,8 @@ publishing {
     publications {
         maven(MavenPublication){
             groupId = 'frc.team6502'
-            artifactId = 'kyberlib-legacy'
-            version = '2019.0'
+            artifactId = 'kyberlib'
+            version = '2019.8.22.11'
 
             from components.java
         }
