--- a/build.gradle
+++ b/build.gradle
@@ -66,3 +66,9 @@ compileKotlin {
 detekt {
     config = files('detekt.yml')
 }
+
+test {
+    testLogging {
+        exceptionFormat = 'full'
+    }
+}
