--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.3.41"
-    id "edu.wpi.first.GradleRIO" version "2020.1.1-beta-3"
+    id "edu.wpi.first.GradleRIO" version "2020.1.1"
     id "io.gitlab.arturbosch.detekt" version "1.0.0-RC14"
     id "maven"
     id "maven-publish"
