--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ wrapper {
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
+        freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
     }
 }
 
