--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.3.41"
     id "edu.wpi.first.GradleRIO" version "2020.1.1"
-    id "io.gitlab.arturbosch.detekt" version "1.0.0-RC14"
+    id "com.diffplug.gradle.spotless" version "3.27.0"
     id "maven"
     id "maven-publish"
 }
@@ -62,12 +62,8 @@ compileKotlin {
     }
 }
 
-detekt {
-    config = files('detekt.yml')
-}
-
-test {
-    testLogging {
-        exceptionFormat = 'full'
+spotless {
+    kotlin {
+        ktlint().userData(['disabled_rules':'no-wildcard-imports'])
     }
 }
