--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ ij_wrap_on_typing = false
 
 [{*.kts, *.kt}]
 ij_continuation_indent_size = 4
-ij_kotlin_align_in_columns_case_branch = true
+ij_kotlin_align_in_columns_case_branch = false
 ij_kotlin_align_multiline_binary_operation = false
 ij_kotlin_align_multiline_extends_list = false
 ij_kotlin_align_multiline_method_parentheses = false
